Fixed header spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -51,7 +51,7 @@ header {
     display: flex;
     list-style-type: none;
     li {
-      width: 6rem;
+      width: 6.5rem;
       a {
         margin: 0 1em;
         color: var(--textcolor);
